tests/snapshots/parser_error_fixtures/exposing_trailing_comma.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_trailing_comma.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Invalid Exposing List

Expected identifier in `exposing` list.

  examples/parser_errors/exposing_trailing_comma.flx:1:26
  |
1 | import Foo exposing (bar,)
  |                          ^

Hint:
  Use `exposing (name1, name2)` to expose specific members.
== stdout ==
<not executed>
